crates/storage-macros/tests/compile_fail/atomic_unit.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/atomic_unit.rs:28:30
   |
28 |         let _: Vec<Parent> = interface.children_of(&parent).unwrap();
   |                -----------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Vec<Parent>`, found `Vec<Child>`
   |                |
   |                expected due to this
   |
   = note: expected struct `Vec<Parent>`
              found struct `Vec<Child>`
